force-app/main/default/objects/Active_Driver__c/Active_Driver__c.object-meta.xml
<CustomObject>
    <label>Active Driver</label>
    <nameField>
        <displayFormat>AD-{00000}</displayFormat>
        <label>Active Driver No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Active Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>