force-app/main/default/objects/Active_Driver__c/fields/Active_Driver_Updated_formula__c.field-meta.xml
<CustomField>
    <fullName>Active_Driver_Updated_formula__c</fullName>
    <description>Active Driver updated within the day. This field will be used for FLOW automation.</description>
    <formula>IF((( LastModifiedDate - CreatedDate )*24*60) &gt; 1, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Driver Updated</label>
    <type>Checkbox</type>
</CustomField>