force-app/main/default/objects/Active_Driver__c/fields/Crew_Change__c.field-meta.xml
<CustomField>
    <fullName>Crew_Change__c</fullName>
    <label>Crew Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>