force-app/main/default/objects/Active_Driver__c/fields/Daily_Pre_Starts_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Daily_Pre_Starts_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily Pre-Starts Assigned</label>
    <type>Checkbox</type>
</CustomField>