force-app/main/default/objects/Active_Driver__c/fields/Day_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Day_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if driver is confirmed on shift and active for work</description>
    <inlineHelpText>Check if driver is confirmed on shift and active for work</inlineHelpText>
    <label>Day Confirmed</label>
    <type>Checkbox</type>
</CustomField>