force-app/main/default/objects/Active_Driver__c/fields/Driver_Assignment_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assignment_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver Assignment Assigned</label>
    <type>Checkbox</type>
</CustomField>