force-app/main/default/objects/Active_Driver__c/fields/Driver_User__c.field-meta.xml
<CustomField>
    <fullName>Driver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Active_Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>