force-app/main/default/objects/Active_Driver__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employees</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Active Drivers</relationshipLabel>
    <relationshipName>Active_Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>