force-app/main/default/objects/Active_Driver__c/fields/Refresh_Active_Driver__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Active_Driver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh Active Driver</label>
    <type>Checkbox</type>
</CustomField>