force-app/main/default/objects/Active_Driver__c/fields/TDR_Date__c.field-meta.xml
<CustomField>
    <fullName>TDR_Date__c</fullName>
    <formula>Transport_Daily_Report__r.Report_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TDR Date</label>
    <type>Date</type>
</CustomField>