force-app/main/default/objects/Active_Driver__c/fields/Timesheet_Approved__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick if this record, matches the drivers timesheet.</description>
    <label>Timesheet Reviewed</label>
    <type>Checkbox</type>
</CustomField>