force-app/main/default/objects/Active_Driver__c/fields/Total_Break_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Break_in_minutes__c</fullName>
    <label>Total Break (in minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>