force-app/main/default/objects/Active_Driver__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Transport Daily Report Unit</description>
    <formula>Transport_Daily_Report__r.Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Transport Daily Report Unit</inlineHelpText>
    <label>Unit</label>
    <type>Text</type>
</CustomField>