force-app/main/default/objects/Active_Driver__c/listViews/By_Date_Two.listView-meta.xml
<ListView>
    <fullName>By_Date_Two</fullName>
    <columns>NAME</columns>
    <columns>Transport_Daily_Report__c</columns>
    <columns>Unit__c</columns>
    <columns>TDR_Date__c</columns>
    <columns>Employees__c</columns>
    <columns>Driver_Assignment_Assigned__c</columns>
    <columns>Day_Confirmed__c</columns>
    <columns>Timesheet_Approved__c</columns>
    <columns>Crew_Change__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TDR_Date__c</field>
        <operation>equals</operation>
        <value>6/25/2025</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>contains</operation>
        <value>roma</value>
    </filters>
    <label>By Date</label>
</ListView>