force-app/main/default/objects/Active_Driver__c/listViews/By_Driver.listView-meta.xml
<ListView>
    <fullName>By_Driver</fullName>
    <columns>NAME</columns>
    <columns>Transport_Daily_Report__c</columns>
    <columns>Unit__c</columns>
    <columns>TDR_Date__c</columns>
    <columns>Employees__c</columns>
    <columns>Driver_Assignment_Assigned__c</columns>
    <columns>Day_Confirmed__c</columns>
    <columns>Timesheet_Approved__c</columns>
    <columns>Crew_Change__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employees__c</field>
        <operation>contains</operation>
        <value>shiner</value>
    </filters>
    <filters>
        <field>TDR_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>3/1/2025</value>
    </filters>
    <label>By Driver</label>
    <sharedTo>
        <group>Finance</group>
        <group>Transport</group>
    </sharedTo>
</ListView>