force-app/main/default/objects/Active_Driver__c/listViews/Today_Moomba.listView-meta.xml
<ListView>
    <fullName>Today_Moomba</fullName>
    <columns>NAME</columns>
    <columns>Transport_Daily_Report__c</columns>
    <columns>Unit__c</columns>
    <columns>TDR_Date__c</columns>
    <columns>Employees__c</columns>
    <columns>Driver_Assignment_Assigned__c</columns>
    <columns>Day_Confirmed__c</columns>
    <columns>Timesheet_Approved__c</columns>
    <columns>Crew_Change__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Transport - Moomba</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>8/1/2025 12:00 AM</value>
    </filters>
    <label>Timesheet Approval | Moomba</label>
    <sharedTo>
        <group>BOO</group>
        <group>HR</group>
        <group>Transport</group>
    </sharedTo>
</ListView>