force-app/main/default/objects/Active_Driver__c/listViews/Today_Roma.listView-meta.xml
<ListView>
    <fullName>Today_Roma</fullName>
    <columns>NAME</columns>
    <columns>Transport_Daily_Report__c</columns>
    <columns>TDR_Date__c</columns>
    <columns>Employees__c</columns>
    <columns>Driver_Assignment_Assigned__c</columns>
    <columns>Day_Confirmed__c</columns>
    <columns>Timesheet_Approved__c</columns>
    <columns>Crew_Change__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TDR_Date__c</field>
        <operation>equals</operation>
        <value>7/31/2025</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>transport - roma</value>
    </filters>
    <label>Timesheet Approval | Roma</label>
    <sharedTo>
        <group>BOO</group>
        <group>HR</group>
        <group>Transport</group>
    </sharedTo>
</ListView>